--- a/src/app.css
+++ b/src/app.css
@@ -535,6 +535,7 @@ a:hover {
   padding-left: 0.75rem;
 }
 
+
 /*<!-------------- Global scape CSS start ------------> */
 
 #gs_event-table .btn-primary {
@@ -549,6 +550,7 @@ a:hover {
 }
 #gs_event-table td.gs_event-col {
   width: 34%;
+  word-break: break-word;
 }
 #gs_event-table button.btn.btn-primary:hover {
   box-shadow: 1px 4px 8px black;
@@ -602,7 +604,7 @@ a:hover {
   } */
 .gs-tabs {
   cursor: pointer;
-  margin: 10px 20px !important;
+  /* margin: 10px 20px !important; */
   box-shadow: 0px 0px 0px grey;
   -webkit-transition: box-shadow 0.6s ease-out;
   /* box-shadow: .8px .9px 3px grey; */
@@ -611,14 +613,111 @@ a:hover {
   box-shadow: 1px 4px 6px gainsboro;
   -webkit-transition: box-shadow 0.6s ease-in;
 }
-/*.titles {
-    line-height: 50px;
-  }/*
-  .gs-tabs:hover .titles {
-    color: black;
+.gs-tabs .titles{
+  line-height: 50px;
+}
+.gs-tabs:hover .titles {
+  color: black;
+}
+
+.gs_event-header {
+  margin: 0px !important; 
+  padding-bottom: 20px;
+  float: right;
+}
+.gs_event-header .titles{
+  line-height: 33px;
+  float: left;
+}
+.gs_event-header .search{
+  float: right;
+}
+.gs-toast{
+  height: 100px;
+  position: fixed;
+  right: 10px;
+ 
+  /* transform: translate(-50%, -50%); */
+  top: 10px;
+  margin-left: -100px;
+  bottom: 10px;
+  background-color: #07bc0c;
+  /* // #35bc7a; */
+  color: #F0F0F0;
+  font-family: Calibri;
+  font-size: 16px;
+  padding: 10px;
+  text-align: center;
+  border-radius: 7px;
+  -webkit-box-shadow: 0px 0px 24px -1px rgb(56 56 56);
+  -moz-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
+  box-shadow: 0px 0px 24px -1px rgb(56 56 56);
+}
+
+.Toastify__progress-bar.Toastify__progress-bar--animated.Toastify__progress-bar--success {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  z-index: 9999;
+  opacity: .7;
+  background-color: hsla(0,0%,100%,.7);
+  transform-origin: left;
+}
+.Toastify__progress-bar--animated {
+  -webkit-animation: Toastify__trackProgress linear 1 forwards;
+  animation: Toastify__trackProgress linear 1 forwards;
+}
+@-webkit-keyframes Toastify__trackProgress {
+  0% {
+      transform: scaleX(1)
   }
-  
-  /*<!-------------- Global scape CSS End ------------> */
+
+  to {
+      transform: scaleX(0)
+  }
+}
+
+@keyframes Toastify__trackProgress {
+  0% {
+      transform: scaleX(1)
+  }
+
+  to {
+      transform: scaleX(0)
+  }
+}
+
+.Toastify__progress-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  z-index: 9999;
+  opacity: .7;
+  background-color: hsla(0,0%,100%,.7);
+  transform-origin: left;
+  animation-duration: 2000ms;
+}
+
+.Toastify__progress-bar--animated {
+  -webkit-animation: Toastify__trackProgress linear 1 forwards;
+  animation: Toastify__trackProgress linear 1 forwards
+}
+
+.Toastify__progress-bar--controlled {
+  transition: transform .2s
+}
+
+.Toastify__progress-bar--rtl {
+  right: 0;
+  left: auto;
+  transform-origin: right
+}
+
+/*<!-------------- Global scape CSS End ------------> */
 
 /* <--------chittaranjan css ---> */
 .Card {
