--- a/src/app.css
+++ b/src/app.css
@@ -549,8 +549,14 @@ a:hover {
 }
 #gs_event-table td,
 #gs_event-table th {
-  padding: 7px;
+  border: 1px solid #ddd;
+  padding: 8px;
 }
+/* #gs_event-table tr:nth-child(even){background-color: #f2f2f2;} */
+
+#gs_event-table tr:hover {box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
+  z-index: 2;}
+
 #gs_event-table td.gs_event-col {
   /* width: 34%; */
   word-break: break-word;
@@ -582,6 +588,8 @@ a:hover {
   /* padding: 10px; */
   /* text-align: center; */
 }
+
+
 .gs-container i {
   position: absolute;
   right: 0px;
@@ -746,7 +754,8 @@ a:hover {
   min-height: 75vh;
 }
 .gs-btn{
-  padding: 1.5rem;
+  /* padding: 1.5rem; */
+  padding: 12px 14px;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.25;
@@ -787,12 +796,16 @@ button.gs-btn span {
   margin-left: 10px;
 }
 .gs-search.search {
-  margin-top: 14px;
+  margin-top: 3px;
   width: 250px;
 }
-.fix-btn{
-  width: 186px;
+
+.fix-btn {
+  width: 170px;
+  background-color: #005eb8;
+  color: white;
 }
+
 .gs-row a {
   padding: 19px;
   text-align: center;
@@ -804,6 +817,7 @@ button.gs-btn span {
   padding: 20px;
   display: table-cell;
   vertical-align: middle;
+  height: 150px;
 }
 
 
