--- a/src/app.css
+++ b/src/app.css
@@ -558,7 +558,7 @@ a:hover {
   z-index: 2;}
 
 #gs_event-table td.gs_event-col {
-  /* width: 34%; */
+  width: 70%;
   word-break: break-word;
 }
 #gs_event-table button.btn.btn-primary:hover {
@@ -587,6 +587,9 @@ a:hover {
   width: 100%;
   /* padding: 10px; */
   /* text-align: center; */
+}
+td.gs_event-col input {
+  margin-right: 12px;
 }
 
 
@@ -660,26 +663,39 @@ a:hover {
 /* .gs_event-header .search{
   float: right;
 } */
+/* .gs-toast .toast-header{
+  background-color: transparent;
+  height: 15px;
+} */
+.toast-header{
+  padding: .25rem .1rem;
+}
+.toast-header img{
+  width: 24px;
+  height: 24px;
+}
+.gs-toast .toast-header button{
+  position: absolute;
+  top: 11px;
+  right: 14px;
+}
 .gs-toast{
   height: 100px;
   position: fixed;
-  left: 40%;
- 
-  /* transform: translate(-50%, -50%); */
-  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 10px;
   margin-left: -100px;
   bottom: 10px;
   background-color: #07bc0c;
-  /* // #35bc7a; */
   color: #F0F0F0;
   font-family: Calibri;
   font-size: 16px;
   padding: 10px;
   text-align: center;
-  border-radius: 7px;
-  -webkit-box-shadow: 0px 0px 24px -1px rgb(56 56 56);
-  -moz-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
+  border-radius: 0px;
   box-shadow: 0px 0px 24px -1px rgb(56 56 56);
+  z-index: 99;
 }
 
 .Toastify__progress-bar.Toastify__progress-bar--animated.Toastify__progress-bar--success {
@@ -797,7 +813,6 @@ button.gs-btn span {
 }
 .gs-search.search {
   margin-top: 3px;
-  width: 250px;
 }
 
 .fix-btn {
