--- a/src/app.css
+++ b/src/app.css
@@ -537,6 +537,19 @@ a:hover {
   padding-left: 0.75rem;
 }
 
+.loader{
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
 
 /*<!-------------- Global scape CSS start ------------> */
 
