--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import-normalize;
+
 * {
   box-sizing: border-box;
   outline: none !important;
@@ -9,18 +11,18 @@
 }
 
 ::placeholder {
-  color: #dbe2e9;
+  color: #333F48;
   opacity: 1; /* Firefox */
 }
 
 :-ms-input-placeholder {
   /* Internet Explorer 10-11 */
-  color: #dbe2e9;
+  color: #333F48;
 }
 
 ::-ms-input-placeholder {
   /* Microsoft Edge */
-  color: #dbe2e9;
+  color: #333F48;
 }
 
 body {
@@ -64,33 +66,16 @@ h6 {
   -moz-transition: margin 0.25s ease-out;
   -o-transition: margin 0.25s ease-out;
   transition: margin 0.25s ease-out;
-  /* font-family: HelveticaRounded-Bold, Helvetica Rounded; */
 }
 
-/* .list-group-item-action {
-    width: 100%;
-    color: #495057;
-    text-align: inherit;
-  } */
-
-/* .list-group {
-    padding-left: 2.5rem !important;
-  } */
 
 .sidebar-heading {
   display: flex;
   flex-flow: column;
-  /* height: 7.5rem; */
   padding: 1rem 1rem 1rem 1rem !important;
   color: white;
   background-color: #005eb8;
-  /* margin-bottom: 1.5rem; */
 }
-
-/* .sidebarMenu {
-    display: inherit;
-    font-size: 1.1vw;
-  } */
 
 .dropdown-content {
   display: none;
@@ -174,39 +159,9 @@ h6 {
   padding-left: 3.5rem !important;
 }
 
-/* #sidebar-wrapper .sidebar-heading {
-    padding: 0.875rem 1.25rem;
-    color: white;
-  } */
-
-.service-tile {
-  min-width: 30% !important;
-  /* max-width: 35% !important; */
-  margin: 0.5rem 0.5rem 1rem 0.5rem;
-  position: unset !important;
-}
 
 .service-tile-content {
   position: unset !important;
-}
-
-.service-tile-row {
-  flex-wrap: nowrap !important;
-  overflow-x: auto;
-}
-
-.service-tile-row::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
-}
-
-/* body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px white(0, 0, 0, 0.3);
-  } */
-
-.service-tile-row::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  border-radius: 10px;
 }
 
 .service-text {
@@ -217,14 +172,6 @@ h6 {
 a:hover {
   color: #333f48 !important;
   text-decoration: none !important;
-}
-
-.social-tag {
-  font-size: 0.9vw;
-}
-
-.footer-copyright {
-  font-size: 1vw;
 }
 
 .list-group-item-action:focus {
@@ -251,12 +198,12 @@ a:hover {
   bottom: 1rem;
 }
 
-.container-fluid-custom li {
-  margin: 0 1rem 0 1rem;
+.social-tag {
+  font-size: 0.9vw;
 }
 
-.container-fluid-custom a {
-  color: #fff;
+.footer-copyright {
+  font-size: 1vw;
 }
 
 .center-container {
@@ -271,9 +218,14 @@ a:hover {
   z-index: 9;
 }
 
-#wrapper.toggled #sidebar-wrapper {
-  margin-left: 0;
+/*Search Bar CSS*/
+
+.search {
+  position: relative;
+  width: 224px;
+  height: 33px;
 }
+
 
 .round {
   width: 100%;
@@ -282,6 +234,8 @@ a:hover {
   top: 0;
   left: 0;
   z-index: 5;
+  border: 1.5px #333F48 solid !important;
+  border-radius: 0.3rem;
 }
 
 .corner {
@@ -293,14 +247,14 @@ a:hover {
   z-index: 10;
   border-radius: 0px;
   border: none;
-  background: url("./assets/images/Logo-Search.svg") no-repeat; /*Set the bg image here. with "no-repeat" */
+  background: url("./assets/images/Logo-Search-Black.svg") no-repeat; /*Set the bg image here. with "no-repeat" */
   background-size: cover;
 }
 
-.corner:hover {
+/* .corner:hover {
   background: url("./assets/images/Logo-Search-Black.svg") no-repeat;
   background-size: cover;
-}
+} */
 
 .service-details {
   font-size: 1vw;
@@ -313,58 +267,10 @@ a:hover {
   border-radius: 0.3rem;
 }
 
-.search {
-  position: relative;
-  width: 224px;
-  height: 33px;
-  /* margin: 1rem 0 0 25rem; */
-}
-
 .page-content-wrapper {
   min-width: 0;
   width: 75%;
   margin-left: 25%;
-}
-
-.form-group.required .control-label:after {
-  content: "*";
-  color: red;
-}
-
-.choices__inner {
-  background-color: inherit !important;
-  border-radius: 0.25rem !important;
-  border: 1px solid #ced4da !important;
-}
-
-.choices__inner:focus {
-  border: 1px solid black !important;
-}
-
-.choices__input {
-  background-color: inherit !important;
-}
-
-.choices__list--multiple .choices__item {
-  background-color: #005eb8 !important;
-  border: #005eb8 !important;
-}
-
-.choices__list--dropdown .choices__item,
-.choices__list--dropdown .choices__list,
-.choices__list--dropdown,
-.choices {
-  position: unset !important;
-}
-
-.choices__list--dropdown .choices__item {
-  font-size: 1rem !important;
-  font-weight: 400;
-  color: #495057 !important;
-}
-
-.form-group {
-  position: unset !important;
 }
 
 .redDot,
@@ -387,41 +293,6 @@ a:hover {
 .greenDot {
   background: rgb(4, 240, 4);
   border: 1px solid rgb(4, 240, 4);
-}
-
-.post-submit-msg {
-  padding: 34vh;
-}
-
-/* @media (min-width: 768px) {
-    #sidebar-wrapper {
-          margin-left: 0;
-      }
-  
-    #page-content-wrapper {
-      min-width: 0;
-      width: 70%;
-    }
-  
-    #wrapper.toggled #sidebar-wrapper {
-          margin-left: -15rem;
-      }
-  } */
-
-.choices {
-  border-radius: 0.25rem !important;
-}
-
-.choices:focus {
-  border-color: inherit !important;
-  outline: 0;
-  box-shadow: inherit !important;
-}
-
-.form-control:focus {
-  border-color: inherit !important;
-  outline: 0;
-  box-shadow: inherit !important;
 }
 
 .dropdown-menu {
@@ -499,20 +370,6 @@ a:hover {
   color: #333f48 !important;
 }
 
-.tc-dashboard button {
-  height: 1.7rem;
-  white-space: nowrap;
-  font-size: 1vw;
-  padding: 0 2px;
-  margin: 1px 1.666px !important;
-  background: #dbe2e9;
-  color: #333f48;
-}
-
-.tc-user-table {
-  line-height: 12px;
-  font-size: 1vw;
-}
 
 .carousel-buttons .dropdown-toggle:hover {
   color: white !important;
@@ -520,21 +377,6 @@ a:hover {
 
 .main-dashboard .thumb-wrapper {
   height: 13rem;
-}
-
-.breadcrumb {
-  padding: 0.1rem !important;
-  margin-bottom: 0.5rem !important;
-  background-color: white !important;
-  font-size: 1.3vw;
-}
-
-.breadcrumb img {
-  height: 1rem !important;
-}
-
-.navigator {
-  padding-left: 0.75rem;
 }
 
 .loader{
