--- a/src/app.css
+++ b/src/app.css
@@ -380,9 +380,9 @@ a:hover {
 }
 
 .loader{
-  display: block; /* Hidden by default */
+  display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 900; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
