--- a/src/app.css
+++ b/src/app.css
@@ -11,18 +11,18 @@
 }
 
 ::placeholder {
-  color: #333F48;
+  color: #333f48;
   opacity: 1; /* Firefox */
 }
 
 :-ms-input-placeholder {
   /* Internet Explorer 10-11 */
-  color: #333F48;
+  color: #333f48;
 }
 
 ::-ms-input-placeholder {
   /* Microsoft Edge */
-  color: #333F48;
+  color: #333f48;
 }
 
 body {
@@ -67,7 +67,6 @@ h6 {
   -o-transition: margin 0.25s ease-out;
   transition: margin 0.25s ease-out;
 }
-
 
 .sidebar-heading {
   display: flex;
@@ -159,7 +158,6 @@ h6 {
   padding-left: 3.5rem !important;
 }
 
-
 .service-tile-content {
   position: unset !important;
 }
@@ -226,7 +224,6 @@ a:hover {
   height: 33px;
 }
 
-
 .round {
   width: 100%;
   padding: 5px 30px 5px 5px;
@@ -234,7 +231,7 @@ a:hover {
   top: 0;
   left: 0;
   z-index: 5;
-  border: 1.5px #333F48 solid !important;
+  border: 1.5px #333f48 solid !important;
   border-radius: 0.3rem;
 }
 
@@ -370,7 +367,6 @@ a:hover {
   color: #333f48 !important;
 }
 
-
 .carousel-buttons .dropdown-toggle:hover {
   color: white !important;
 }
@@ -379,7 +375,7 @@ a:hover {
   height: 13rem;
 }
 
-.loader{
+.loader {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 900; /* Sit on top */
@@ -388,22 +384,66 @@ a:hover {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
-.loader .row{
+.loader .row {
   align-content: center;
 }
 
-.toggle-persona .dropdown-toggle{
+.toggle-persona .dropdown-toggle {
   color: white;
 }
 
-
+/*Cookie Consent Begin*/
+#cookieConsent {
+  text-align: left;
+  background-color: rgba(20, 20, 20, 0.8);
+  min-height: 26px;
+  font-size: 14px;
+  color: #ccc;
+  line-height: 26px;
+  padding: 8px 0 8px 30px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  z-index: 9999;
+  position: fixed;
+}
+#cookieConsent a {
+  color: #005eb8;
+  text-decoration: none;
+}
+#closeCookieConsent {
+  float: right;
+  display: inline-block;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  margin: -15px 0 0 0;
+  font-weight: bold;
+}
+#closeCookieConsent:hover {
+  color: #fff;
+}
+#cookieConsent a.cookieConsentOK {
+  background-color: #005eb8;
+  color: #fff;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 0 20px;
+  cursor: pointer;
+  float: right;
+  margin: 0 60px 0 10px;
+}
+#cookieConsent a.cookieConsentOK:hover {
+  background-color: #e0c91f;
+}
+/*Cookie Consent End*/
 
 /*<!-------------- Global scape CSS start ------------> */
-
 
 #gs_event-table .btn-primary {
   /* background-color: #0C2340; */
@@ -418,8 +458,11 @@ a:hover {
 }
 /* #gs_event-table tr:nth-child(even){background-color: #f2f2f2;} */
 
-#gs_event-table tr:hover {box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
-  z-index: 2;}
+#gs_event-table tr:hover {
+  box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0,
+    0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
+  z-index: 2;
+}
 
 #gs_event-table td.gs_event-col {
   width: 70%;
@@ -456,7 +499,6 @@ td.gs_event-col input {
   margin-right: 12px;
 }
 
-
 .gs-container i {
   position: absolute;
   right: 0px;
@@ -491,7 +533,7 @@ td.gs_event-col input {
   box-shadow: 1px 4px 6px gainsboro;
   -webkit-transition: box-shadow 0.6s ease-in;
 }
-.gs-tabs .titles{
+.gs-tabs .titles {
   line-height: 50px;
 }
 .gs-tabs:hover .titles {
@@ -499,13 +541,13 @@ td.gs_event-col input {
 }
 
 .gs_event-header {
-  margin: 0px !important; 
+  margin: 0px !important;
   padding-bottom: 20px;
   float: left;
   width: 100%;
 }
 /* new css */
-.gs_event-header ul{
+.gs_event-header ul {
   margin: 0px;
   padding: 0px;
 }
@@ -517,10 +559,9 @@ td.gs_event-col input {
 }
 
 .gs_event-header ul li:last-child {
- 
   padding-right: 0px;
-  }
-.gs_event-header .titles{
+}
+.gs_event-header .titles {
   line-height: 33px;
   float: left;
 }
@@ -531,19 +572,19 @@ td.gs_event-col input {
   background-color: transparent;
   height: 15px;
 } */
-.toast-header{
-  padding: .25rem .1rem;
+.toast-header {
+  padding: 0.25rem 0.1rem;
 }
-.toast-header img{
+.toast-header img {
   width: 24px;
   height: 24px;
 }
-.gs-toast .toast-header button{
+.gs-toast .toast-header button {
   position: absolute;
   top: 11px;
   right: 14px;
 }
-.gs-toast{
+.gs-toast {
   height: 100px;
   position: fixed;
   left: 50%;
@@ -552,7 +593,7 @@ td.gs_event-col input {
   margin-left: -100px;
   bottom: 10px;
   background-color: #07bc0c;
-  color: #F0F0F0;
+  color: #f0f0f0;
   font-family: Calibri;
   font-size: 16px;
   padding: 10px;
@@ -569,8 +610,8 @@ td.gs_event-col input {
   width: 100%;
   height: 5px;
   z-index: 9999;
-  opacity: .7;
-  background-color: hsla(0,0%,100%,.7);
+  opacity: 0.7;
+  background-color: hsla(0, 0%, 100%, 0.7);
   transform-origin: left;
 }
 .Toastify__progress-bar--animated {
@@ -579,21 +620,21 @@ td.gs_event-col input {
 }
 @-webkit-keyframes Toastify__trackProgress {
   0% {
-      transform: scaleX(1)
+    transform: scaleX(1);
   }
 
   to {
-      transform: scaleX(0)
+    transform: scaleX(0);
   }
 }
 
 @keyframes Toastify__trackProgress {
   0% {
-      transform: scaleX(1)
+    transform: scaleX(1);
   }
 
   to {
-      transform: scaleX(0)
+    transform: scaleX(0);
   }
 }
 
@@ -604,25 +645,25 @@ td.gs_event-col input {
   width: 100%;
   height: 5px;
   z-index: 9999;
-  opacity: .7;
-  background-color: hsla(0,0%,100%,.7);
+  opacity: 0.7;
+  background-color: hsla(0, 0%, 100%, 0.7);
   transform-origin: left;
   animation-duration: 2000ms;
 }
 
 .Toastify__progress-bar--animated {
   -webkit-animation: Toastify__trackProgress linear 1 forwards;
-  animation: Toastify__trackProgress linear 1 forwards
+  animation: Toastify__trackProgress linear 1 forwards;
 }
 
 .Toastify__progress-bar--controlled {
-  transition: transform .2s
+  transition: transform 0.2s;
 }
 
 .Toastify__progress-bar--rtl {
   right: 0;
   left: auto;
-  transform-origin: right
+  transform-origin: right;
 }
 .gs-loader {
   position: absolute;
@@ -633,7 +674,7 @@ td.gs_event-col input {
   position: relative;
   min-height: 75vh;
 }
-.gs-btn{
+.gs-btn {
   /* padding: 1.5rem; */
   padding: 12px 14px;
   font-size: 1rem;
@@ -641,7 +682,7 @@ td.gs_event-col input {
   line-height: 1.25;
   color: #32325d;
   background-color: #f6f9fc;
-  border-radius: .375rem;
+  border-radius: 0.375rem;
   border: 0;
   text-align: left;
   /* font-family: sans-serif; */
@@ -651,25 +692,24 @@ td.gs_event-col input {
   -moz-appearance: none;
   cursor: pointer;
   width: 100%;
- 
 }
-.gs-btn:hover{
+.gs-btn:hover {
   color: rgb(255, 255, 255);
   box-shadow: 0 0 0 1px rgb(0 0 0 / 10%), 0 4px 16px rgb(0 0 0 / 10%);
 }
-.green:hover{
-  background: linear-gradient(to right, rgb(91, 144, 39), rgb(78, 124, 34));  
+.green:hover {
+  background: linear-gradient(to right, rgb(91, 144, 39), rgb(78, 124, 34));
 }
-.orange:hover{
-  background: linear-gradient(to right, rgb(221, 157, 18), rgb(197, 140, 16));  
+.orange:hover {
+  background: linear-gradient(to right, rgb(221, 157, 18), rgb(197, 140, 16));
 }
-.purple:hover{
+.purple:hover {
   background: linear-gradient(to right, rgb(170, 102, 204), rgb(159, 83, 198));
 }
-.maroon:hover{
+.maroon:hover {
   background: linear-gradient(to right, rgb(211, 42, 14), rgb(187, 37, 12));
 }
-.grey:hover{
+.grey:hover {
   background: linear-gradient(to right, rgb(68, 67, 64), rgb(55, 54, 52));
 }
 button.gs-btn span {
@@ -698,7 +738,6 @@ button.gs-btn span {
   vertical-align: middle;
   height: 150px;
 }
-
 
 /*<!-------------- Global scape CSS End ------------> */
 
