--- a/src/app.css
+++ b/src/app.css
@@ -975,7 +975,7 @@ select.classic:focus {
 /* <----- new provisioning css End ---> */
 
 /* <------ new subscription --------> */
-.mb-3.bucAdnComNew.row {
+.bucAdnComNew {
   margin-left: 30px !important;
 }
 .product-CheckBoxGroup {
@@ -1004,6 +1004,13 @@ select.classic:focus {
 }
 .updateSubAlign {
   padding-left: 3%;
+}
+.productCheck {
+  color: red;
+  margin-left: -36%;
+}
+.errorMsg {
+  color: red;
 }
 
 /* <------ new subscription End -----> */
