--- a/src/app.css
+++ b/src/app.css
@@ -856,8 +856,8 @@ button.gs-btn span {
 
 .Card:hover {
   transform: scale(0.9, 0.9);
-  box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
-    -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+  box-shadow: 2px 2px 20px 5px rgba(0, 0, 0, 0.25),
+    -2px -2px 10px 5px rgba(0, 0, 0, 0.22);
 }
 
 .form-check {
@@ -931,8 +931,47 @@ select.classic:focus {
 }
 
 .form-switch {
-  margin-left: 8px;
+  margin-left: 18px;
 }
+.radioselect {
+  margin-top: 7px;
+  font-size: 1rem;
+  font-weight: 100;
+}
+.tableheading {
+  font-size: 1rem;
+}
+.alignbox {
+  padding-left: 1.5%;
+}
+.align-row {
+  padding-left: 21px;
+}
+.fieldhelm {
+  margin-left: -1%;
+}
+.vlanfield {
+  margin-left: -1%;
+  margin-top: 13px;
+}
+.alignupdateRow {
+  padding-left: 18px;
+}
+.tc-manage .col-md-3 {
+  position: unset !important;
+}
+.submit {
+  margin-left: 17px;
+}
+.tc-manage {
+  position: unset !important;
+}
+/* .tc-manage .row,
+.tc-manage .col,
+.tc-manage .col-md-3,
+.tc-manage .card {
+  position: unset !important;
+} */
 /* <----- new provisioning css End ---> */
 
 /* <------ new subscription --------> */
@@ -953,12 +992,18 @@ select.classic:focus {
   height: 40px;
 }
 .mb-3.subscription-submit.row {
-  margin-left: 20px;
+  margin-left: 23px;
   margin-top: 10px;
 }
 .mb-3.UpdateSubmit.row {
-  margin-left: 20px;
+  margin-left: 25px;
   margin-top: 10px;
+}
+.newSubAlign {
+  padding-left: 30px;
+}
+.updateSubAlign {
+  padding-left: 3%;
 }
 
 /* <------ new subscription End -----> */
@@ -973,6 +1018,7 @@ select.classic:focus {
 /* <-------- manage component ---------> */
 .aligncenter {
   text-align: center;
+  position: unset !important;
 }
 /* <--------- manage component end --------> */
 
