--- a/src/app.css
+++ b/src/app.css
@@ -741,6 +741,10 @@ button.gs-btn span {
   margin-right: 20px;
 }
 
+.gs-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
 .gs-row a {
   padding: 19px;
   text-align: center;
@@ -907,7 +911,7 @@ button.gs-btn span {
 }
 
 .Card:hover {
-  transform: scale(0.9, 0.9);
+  transform: scale(1.05);
   box-shadow: 2px 2px 20px 5px rgba(0, 0, 0, 0.25),
     -2px -2px 10px 5px rgba(0, 0, 0, 0.22);
 }
